--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="back_btn_desc">Back</string>
     <string name="book_status">Book status</string>
     <string name="add_book_btn_desc">Add a book</string>
+    <string name="delete_book">Delete</string>
 </resources>
