--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,31 @@
 <resources>
     <string name="app_name">BookReadingApp_Android</string>
-    <string name="library_tab_name">Library</string>
 
+    // Bottom navigation bar
+    <string name="library_page_name">Library</string>
+    <string name="bookmarks_page_name">Bookmarks</string>
+    <string name="notes_page_name">Notes</string>
+    <string name="sharing_page_name">Sharing</string>
+
+    // Shared
     <string name="settings_btn_desc">Settings</string>
-    <string name="add_btn_desc">Add book</string>
-    <string name="sort_books_btn_desc">Sort books</string>
-    <string name="books_btn_desc">Books</string>
-    <string name="notes_btn_desc">Notes</string>
-    <string name="bookmarks_btn_desc">Bookmarks</string>
-    <string name="book_cover_desc">Book cover</string>
-    <string name="sharing_btn_desc">Sharing</string>
     <string name="back_btn_desc">Back</string>
+    <string name="book_cover_desc">Book cover</string>
+
+    // Library page
+    <string name="sort_books_btn_desc">Sort books</string>
     <string name="add_book_btn_desc">Add book</string>
     <string name="book_status_img_desc">Book status</string>
-
-    <string name="delete_book_menu_title">Delete</string>
-
+    <string name="delete_book_spinner">Delete</string>
     <string name="num_books">%1$d books</string>
     <string name="empty_book_list_desc">Your bookshelf is empty\nAdd a new book and start reading</string>
+
+    // Bookmarks page
+    <string name="sort_bookmarks_btn_desc">Sort bookmarks</string>
+    <string name="add_bookmark_btn_desc">Add bookmark</string>
+    <string name="bookmark_status_img_desc">Bookmark status</string>
+    <string name="delete_bookmark_spinner">Delete</string>
+    <string name="num_bookmarks">%1$d bookmarks</string>
+    <string name="bookmark_page">Page %1$d / %2$d</string>
+    <string name="empty_bookmark_list_desc">You haven\'t add any bookmarks</string>
 </resources>
