--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="settings_btn_desc">Settings</string>
     <string name="back_btn_desc">Back</string>
     <string name="book_cover_desc">Book cover</string>
+    <string name="book_overview_spinner">Book overview</string>
 
     <!-- App bar-->
     <string name="home_screen_label">Home</string>
@@ -26,7 +27,7 @@
     <string name="sort_books_btn_desc">Sort books</string>
     <string name="add_book_btn_desc">Add book</string>
     <string name="book_status_img_desc">Book status</string>
-    <string name="delete_book_spinner">Delete</string>
+    <string name="delete_book_spinner">Delete book</string>
     <string name="num_books">%1$d books</string>
     <string name="empty_book_list_desc">Your bookshelf is empty</string>
 
@@ -34,7 +35,7 @@
     <string name="sort_bookmarks_btn_desc">Sort bookmarks</string>
     <string name="add_bookmark_btn_desc">Add bookmark</string>
     <string name="bookmark_status_img_desc">Bookmark status</string>
-    <string name="delete_bookmark_spinner">Delete</string>
+    <string name="delete_bookmark_spinner">Delete bookmark</string>
     <string name="num_bookmarks">%1$d bookmarks</string>
     <string name="bookmark_page">Page %1$d / %2$d</string>
     <string name="empty_bookmark_list_desc">You haven\'t add any bookmarks</string>
